Unreasonable huge memory occupation rendering certain simple scene #40289

Closed
opened 2014-05-21 05:09:20 +02:00 by Willi · 5 comments

System Information
Win7/64, AMD HD6850

Blender Version
Broken: blender-2.70-be980b9-win64 (May 16)
Worked: blender-2.70-51fa66b-win64 (May 13)

Short description of error
see title

Exact steps for others to reproduce the error

ATTENTION: Memory usage increases by ~1 GB/second which might render the machine unresponsive very quickly.

  • Open MemConsumption.blend
  • Start rendering
    Memory usage "explodes" since the version mentioned above. It took me several hours to narrow the real project down to the scene attached. Happens only with Cycles, not with BI.
**System Information** Win7/64, AMD HD6850 **Blender Version** Broken: blender-2.70-be980b9-win64 (May 16) Worked: blender-2.70-51fa66b-win64 (May 13) **Short description of error** see title **Exact steps for others to reproduce the error** **ATTENTION**: Memory usage increases by ~1 GB/second which might render the machine unresponsive very quickly. - Open [MemConsumption.blend](https://archive.blender.org/developer/F89548/MemConsumption.blend) - Start rendering Memory usage "explodes" since the version mentioned above. It took me several hours to narrow the real project down to the scene attached. Happens only with Cycles, not with BI.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

This issue was referenced by 238a6149af

This issue was referenced by 238a6149af6b18b198a02152ee28a89c83b13af2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 238a6149af.

Closed by commit 238a6149af.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40289
No description provided.