Fix T40289: Cycles leaking memory

error in recent commit